--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "meliusa.github.io",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
@@ -10,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.11"
-  }
+  },
+  "description": ""
 }
