--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.11"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "express": "^4.21.0",
+    "nodemailer": "^6.9.15"
+  }
 }
